--- a/profile.html
+++ b/profile.html
@@ -15,7 +15,8 @@
     />
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
     <script src="https://kit.fontawesome.com/87903c1d5c.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/css/index.css" />
+    <link rel="stylesheet" href="/scss/index.css" />
+    <link rel="stylesheet" href="/scss/profile.css" />
   </head>
   <body>
     <header>
@@ -36,13 +37,24 @@
         </div>
         <div class="d-flex">
           <div class="user-profile">
-            <a href="/html/profile.html">
-              <img class="profile-pic" src="/pic/IMG_2437.jpg" alt="profile picture" />
+            <a href="/profile.html">
+              <img src="/pic/IMG_2437.jpg" alt="profile picture" />
             </a>
           </div>
         </div>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <section class="user-info d-flex mt-5 mx-4">
+        <div>
+          <img class="profile-pic mx-4" src="/pic/IMG_2437.jpg" alt="profile picture" />
+        </div>
+        <div class="user-details-wrap d-flex-row mx-4">
+          <h1>Details</h1>
+          <div class="user-details-text">Details about the user...</div>
+        </div>
+      </section>
+      <section class="users-contacts"></section>
+    </main>
   </body>
 </html>
