--- a/login.html
+++ b/login.html
@@ -17,59 +17,89 @@
     <script src="https://kit.fontawesome.com/87903c1d5c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/scss/index.css" />
     <link rel="stylesheet" href="/scss/login.css" />
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
+      integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js"
+      integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header>
-      <nav class="navbar d-flex justify-content-between px-4">
-        <!-- SEARH FIELD -->
-        <div>
+      <nav class="navigation d-flex justify-content-between px-4">
+        <section class="logo-wrap d-flex flex-column justify-content-center">
           <a href="/index.html" class="d-flex">
             <i class="fa-solid fa-address-book"></i>
             <div class="contactbook ms-2">Contactbook</div>
           </a>
-        </div>
-        <div class="d-flex align-items-center justify-content-center">
-          <form action="/index.html">
-            <label for="searchfield">search</label>
-            <input class="form-controll" type="text" name="search" />
-            <button type="submit">
-              <i class="fa fa-search" id="search-bar-icon"></i>
-            </button>
-          </form>
-        </div>
-        <div class="button d-flex">
-         <button class="cta-button" onclick="window.location.href='/login.html'">Login</button>
-         <button class="cta-button" onclick="window.location.href='#'">Sign up</button>  
-        </div>
-        </div>
+        </section>
+        <!--HAMBURGER ICON-->
+        <section class="navbar navbar-expand-md">
+          <a class="navbar-brand" href="#"></a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <div class="navbar-nav justify-content-between">
+              <form class="form-wrap d-flex">
+                <input class="form-control me-1" type="search" placeholder="Search" />
+                <button class="search-btn rounded" type="submit">
+                  <i class="fa fa-search" id="search-bar-icon"></i>
+                </button>
+              </form>
+              <div class="cta-button d-flex">
+                <button class="login-btn rounded" onclick="window.location.href='/login.html'">
+                  Login
+                </button>
+                <button class="sign-up-btn rounded" onclick="window.location.href='#'">
+                  Sign up
+                </button>
+              </div>
+            </div>
+          </div>
+        </section>
       </nav>
     </header>
     <main class="login-main d-flex justify-content-center">
-        <div class="login-box d-flex flex-column justify-content-center align-items-center rounded p-4">
-          <div class="text">
-            <h1 class="d-flex justify-content-center">LOGIN</h1>
-            <div class="login-form d-flex flex-column">
-              <p>Already have an account? Log in below.</p>
-              <a href="#">Or create a new account.</a>
-            </div>
-            <form class="login-form mt-4 font-weight-bold">
-              <label for="username">Email or Username</label><br />
-              <input
-                type="text"
-                class="username my-2"
-                name="username"
-                placeholder="Enter username"
-              /><br />
-              <label for="pwd">Password</label><br />
-              <input type="password" class="pwd my-2" name="pwd" placeholder="Enter password" />
-            </form>
-            <div class="button d-flex justify-content-center align-items-center">
-              <a href="/profile.html">
-                <button class="cta-login">Login</button>
-              </a>
-            </div>
+      <div
+        class="login-box d-flex flex-column justify-content-center align-items-center rounded p-4"
+      >
+        <div class="text">
+          <h1 class="d-flex justify-content-center mb-4">LOGIN</h1>
+          <div class="login-form d-flex flex-column">
+            <p>Already have an account? Log in below.</p>
+            <a href="#">Or create a new account.</a>
+          </div>
+          <form class="login-form mt-3 font-weight-bold">
+            <label for="username">Email or Username</label><br />
+            <input
+              type="text"
+              class="username"
+              name="username"
+              placeholder="Enter username"
+            /><br />
+            <label class="mt-3" for="pwd">Password</label><br />
+            <input type="password" class="pwd my-2" name="pwd" placeholder="Enter password" />
+          </form>
+          <div class="button d-flex justify-content-center align-items-center">
+            <a href="/profile.html">
+              <button class="login-btn rounded mt-3">Login</button>
+            </a>
           </div>
         </div>
-      </main>
- </body>
+      </div>
+    </main>
+  </body>
 </html>
