fixed login page

--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
       <nav class="navigation d-flex justify-content-between px-4">
         <section class="logo-wrap d-flex flex-column justify-content-center">
           <a href="/index.html" class="d-flex">
-            <i class="fa-solid fa-address-book"></i>
-            <div class="contactbook ms-2">Contactbook</div>
+            <i class="fa-solid fa-address-book text-decoration-none"></i>
+            <div class="contactbook ms-2 font-weight-bold">Contactbook</div>
           </a>
         </section>
         <!--HAMBURGER ICON-->
         <section class="navbar navbar-expand-md">
           <a class="navbar-brand" href="#"></a>
           <button
-            class="navbar-toggler"
+            class="navbar-toggler bg-white"
             type="button"
             data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent"
@@ -59,7 +59,7 @@
                 </button>
               </form>
               <div class="cta-button d-flex">
-                <button class="login-btn rounded" onclick="window.location.href='/login.html'">
+                <button class="login-btn rounded mx-2" onclick="window.location.href='/login.html'">
                   Login
                 </button>
                 <button class="sign-up-btn rounded" onclick="window.location.href='#'">
