--- a/login.html
+++ b/login.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="a social media application" />
+    <meta name="description" content="login to Contactbook, a social media application" />
     <meta name="author" content="Thong Trong Ho" />
-    <title>Contactbook</title>
+    <title>Contactbook Login</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -78,28 +78,34 @@
       >
         <div class="text">
           <h1 class="d-flex justify-content-center mb-4">LOGIN</h1>
-          <div class="login-form d-flex flex-column">
+          <div class="login-text d-flex flex-column">
             <p>Already have an account? Log in below.</p>
             <a href="#">Or create a new account.</a>
           </div>
-          <form class="login-form mt-3 font-weight-bold">
-            <label for="username">Email or Username</label><br />
+          <form
+            class="login-form mt-3 font-weight-bold"
+            id="formFeedback"
+            action="/profile.html"
+            onSubmit="log_console()"
+            method="GET"
+          >
+            <label class="form-name" for="email">Email</label>
+            <input class="input-text" type="text" name="email" id="email" required />
+            <div class="form-error" id="emailError">Invalid e-mail</div>
+            <label class="form-name mt-4" for="pwd">Password</label>
+            <input type="password" class="pwd my-2" name="pwd" id="password" required />
+            <div class="form-error" id="pwdError">Minimum 8 characters</div>
             <input
-              type="text"
-              class="username"
-              name="username"
-              placeholder="Enter username"
-            /><br />
-            <label class="mt-3" for="pwd">Password</label><br />
-            <input type="password" class="pwd my-2" name="pwd" placeholder="Enter password" />
+              class="login-btn d-flex justify-content-center align-items-center rounded mt-3"
+              type="submit"
+              id="submit"
+              value="Login"
+            />
           </form>
-          <div class="button d-flex justify-content-center align-items-center">
-            <a href="/profile.html">
-              <button class="login-btn rounded mt-3">Login</button>
-            </a>
-          </div>
         </div>
       </div>
     </main>
+    <script src="/js/login.js"></script>
+    <script src="/js/displayError.js"></script>
   </body>
 </html>
