--- a/profile.html
+++ b/profile.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="a social media application" />
+    <meta name="description" content="profile to Contactbook, a social media application" />
     <meta name="author" content="Thong Trong Ho" />
     <title>Contactbook Profile</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
