--- a/postIndex.html
+++ b/postIndex.html
@@ -4,19 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="login to Contactbook, a social media application" />
+    <meta name="description" content="a social media application" />
     <meta name="author" content="Thong Trong Ho" />
-    <title>Contactbook Login</title>
+    <title>Contactbook - Post</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@200;300;400;500&family=Noto+Sans+JP:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css" />
     <script src="https://kit.fontawesome.com/87903c1d5c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/scss/index.css" />
-    <link rel="stylesheet" href="/scss/login.css" />
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
       integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk"
@@ -64,7 +63,7 @@
                 <button class="login-btn rounded mx-2" onclick="window.location.href='/login.html'">
                   Login
                 </button>
-                <button class="sign-up-btn rounded" onclick="window.location.href='#'">
+                <button class="sign-up-btn rounded" onclick="window.location.href='/register.html'">
                   Sign up
                 </button>
               </div>
@@ -73,43 +72,43 @@
         </section>
       </nav>
     </header>
-    <main class="login-main d-flex justify-content-center">
-      <div
-        class="login-box d-flex flex-column justify-content-center align-items-center rounded p-4"
-      >
-        <div class="text">
-          <h1 class="d-flex justify-content-center mb-4">LOGIN</h1>
-          <div class="login-text d-flex flex-column">
-            <p>Already have an account? Log in below.</p>
-            <a href="/register.html">Or create a new account.</a>
-          </div>
-          <form class="login-form mt-3 font-weight-bold" id="loginForm">
-            <label class="form-name" for="email">Email</label>
-            <input
-              class="form-control"
-              type="email"
-              name="email"
-              id="email"
-              required
-              pattern="^[\w\-.]+@(stud.)?noroff.no$"
-              title="Only @(study.)noroff.no domains are allow to register."
-            />
-            <div class="form-error" id="emailError">Invalid e-mail</div>
-            <label class="form-name mt-4" for="pwd">Password</label>
-            <input
-              type="password"
-              class="form-control my-2"
-              name="password"
-              id="password"
-              required
-              minlength="8"
-            />
-            <div class="form-error" id="pwdError">Minimum 8 characters</div>
-            <button class="btn btn-success text-light">Login</button>
+    <main class="body-wrap px-4 pb-5">
+      <section class="pt-4 d-flex justify-content-center">
+        <div class="d-flex flex-column">
+          <h2>New Post</h2>
+          <form action="/postsIndex.html" class="new-post-wrap p-3 rounded">
+            <textarea
+              name="new-post--text"
+              id="new-post--text"
+              cols="40"
+              rows="3"
+              placeholder="What are you thinking?"
+              class="rounded"
+            ></textarea>
+            <br />
+            <div class="mt-1">
+              <input class="rounded" type="submit" value="Post" />
+              <input class="rounded ms-2" type="button" value="Upload img" />
+            </div>
           </form>
         </div>
-      </div>
+      </section>
+      <section class="old-post mt-4 d-flex justify-content-center">
+        <div class="old-post-wrap d-flex flex-column p-3 rounded">
+          <div class="d-flex flex-column" id="user-post">
+            <div class="user-profile">
+              <a href="/profile.html">
+                <img src="/pic/IMG_2437.jpg" alt="profile picture" class="profile-pic" />
+              </a>
+            </div>
+            <div class="user-name ps-3 pt-1">
+              <h4>Thong Trong Ho</h4>
+            </div>
+          </div>
+          <div class="mt-3"></div>
+          <div class="post-pic-wrap mb-4"></div>
+        </div>
+      </section>
     </main>
-    <script src="/js/displayError.js"></script>
   </body>
 </html>
