--- a/postsIndex.html
+++ b/postsIndex.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="a social media application" />
     <meta name="author" content="Thong Trong Ho" />
-    <title>Contactbook - register</title>
+    <title>Contactbook - Posts</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@200;300;400;500&family=Noto+Sans+JP:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css" />
     <script src="https://kit.fontawesome.com/87903c1d5c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/scss/index.css" />
     <script
@@ -63,7 +63,7 @@
                 <button class="login-btn rounded mx-2" onclick="window.location.href='/login.html'">
                   Login
                 </button>
-                <button class="sign-up-btn rounded" onclick="window.location.href='#'">
+                <button class="sign-up-btn rounded" onclick="window.location.href='/register.html'">
                   Sign up
                 </button>
               </div>
@@ -72,66 +72,44 @@
         </section>
       </nav>
     </header>
-    <main class="flex-grow-1 text-light mt-2">
-      <div class="container-fluid">
-        <div class="row justify-content-center">
-          <div class="col-12 col-md-6">
-            <form id="registerForm">
-              <div class="form-group mb-3">
-                <label for="">
-                  Name
-                  <input
-                    class="form-control"
-                    type="text"
-                    name="name"
-                    required
-                    pattern="^[\w]+$"
-                    title="User name must only contain lowsercase and uppercase, numbers and underscore."
-                  />
-                </label>
-              </div>
-              <div class="form-group mb-3">
-                <label for=""
-                  >Email
-                  <input
-                    class="form-control"
-                    type="email"
-                    name="email"
-                    required
-                    pattern="^[\w\-.]+@(stud.)?noroff.no$"
-                    title="Only @(study.)noroff.no domains are allow to register."
-                  />
-                </label>
-              </div>
-              <div class="form-group mb-3">
-                <label for=""
-                  >Password (min 8 characters)
-                  <input
-                    class="form-control"
-                    type="password"
-                    name="password"
-                    required
-                    minlength="8"
-                  />
-                </label>
-              </div>
-              <!-- <div class="form-group mb-3">
-                <label for=""
-                  >Banner
-                  <input class="form-control" type="url" name="banner" />
-                </label>
-              </div>
-              <div class="form-group mb-3">
-                <label for=""
-                  >Avatar
-                  <input class="form-control" type="url" name="avatar" />
-                </label>
-              </div> -->
-              <button class="btn btn-success text-light">Register</button>
-            </form>
+    <main class="body-wrap px-4 pb-5">
+      <section class="pt-4 d-flex justify-content-center">
+        <div class="d-flex flex-column">
+          <h2>New Post</h2>
+          <form action="/postsIndex.html" class="new-post-wrap p-3 rounded">
+            <textarea
+              name="new-post--text"
+              id="new-post--text"
+              cols="40"
+              rows="3"
+              placeholder="What are you thinking?"
+              class="rounded"
+            ></textarea>
+            <br />
+            <div class="mt-1">
+              <input class="rounded" type="submit" value="Post" />
+              <input class="rounded ms-2" type="button" value="Upload img" />
+            </div>
+          </form>
+        </div>
+      </section>
+      <section class="old-post mt-4 d-flex justify-content-center">
+        <div class="old-post-wrap d-flex flex-column p-3 rounded">
+          <div class="d-flex">
+            <div class="user-profile">
+              <a href="/profile.html">
+                <img src="/pic/IMG_2437.jpg" alt="profile picture" class="profile-pic" />
+              </a>
+            </div>
+            <div class="user-name ps-3 pt-1">
+              <h4>Thong Trong Ho</h4>
+            </div>
+          </div>
+          <div class="user-status mt-3 col-12 col-md-6">
+            <div class="post-pic-wrap mb-4" id="posts"></div>
           </div>
         </div>
-      </div>
+      </section>
     </main>
   </body>
 </html>
